--- a/public/index.html
+++ b/public/index.html
@@ -1,92 +1,179 @@
-<!DOCTYPE html>
-<html lang="en">
-<!--
-Exchange the line above for this to enable offline support
-<html lang="en" manifest="manifest.appcache">
--->
-  <head>
-    <meta charset="UTF-8">
-    <link rel="manifest" href="manifest.json">
-    <title></title>
-    <meta name="description" content="">
-    <!-- remove maximum-scale for mobile web -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <!-- installable from browser -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <!-- icons -->
-    <link rel="icon" href="style/icons/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" sizes="128x128" href="apple-touch-icon-precomposed.png">
-    <link rel="style/icons/apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+<!DOCTYPE HTML>
+<html>
+<head>
+<title>Blog</title>
+<meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="format-detection" content="telephone=no">
+<meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="sytle.css">
+<link rel="stylesheet" type="text/css" href="http://keleyi.com/keleyi/phtml/jqtexiao/38/hovertreewx.css" />
+<script src="http://keleyi.com/keleyi/pmedia/jquery/jquery-1.11.3.min.js"></script>
+<script src="iscroll.js" type="text/javascript"></script>
+<script type="text/javascript">
+var myScroll;
 
-    <!-- IE compatibility -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--[if IE]><link rel="shortcut icon" href="style/icons/favicon.ico"  type="image/x-icon"><![endif]-->
+function loaded() {
+myScroll = new iScroll('qiehuan', {
+snap: true,
+momentum: false,
+hScrollbar: false,
+onScrollEnd: function () {
+document.querySelector('#indicator > li.active').className = '';
+document.querySelector('#indicator > li:nth-child(' + (this.currPageX+1) + ')').className = 'active';
+}
+ });
+ 
+ 
+}
+
+document.addEventListener('DOMContentLoaded', loaded, false);
+</script>
+</head>
+<body>
+<!-- header 开始 -->
+    	<div class="header black_gradient">
+    	  <div class="zixuntext">资讯</div>
+</div>
+<!-- header 结束 -->
+<div class="Newsinfo">
+<h2 class="news_title">今日要闻</h2>
+<div class="banner">
+<div id="qiehuan">
+<div id="scroller">
+<ul id="thelist">
+<li><p>沪指冲高回落 3700点得而复失</p><a href="javascript:void(0)"><img src="banner_1.jpg"/></a></li>
+<li><p>救市任重道远</p><a href="javascript:void(0)"><img src="banner_2.jpg" /></a></li>
+<li><p>黄金坑现身 三招底部扫货</p><a href="javascript:void(0)"><img src="banner_3.jpg" /></a></li>
+</ul>
+</div>
+</div>
+<div class="nav">
+  <ul id="indicator">
+   <li class="active" ></li>
+   <li  ></li>
+   <li  ></li>
+  </ul>
+</div>
+<script>
+var count = document.getElementById("thelist").getElementsByTagName("img").length;	
+
+var count2 = document.getElementsByClassName("menuimg").length;
+for(i=0;i<count;i++){
+ document.getElementById("thelist").getElementsByTagName("img").item(i).style.cssText = " width:"+document.body.clientWidth+"px";
+
+}
+document.getElementById("scroller").style.cssText = " width:"+document.body.clientWidth*count+"px";
+
+ setInterval(function(){
+myScroll.scrollToPage('next', 0,400,count);
+},3500 );
+window.onresize = function(){ 
+for(i=0;i<count;i++){
+document.getElementById("thelist").getElementsByTagName("img").item(i).style.cssText = " width:"+document.body.clientWidth+"px";
+
+}
+ document.getElementById("scroller").style.cssText = " width:"+document.body.clientWidth*count+"px";
+} 
+
+</script>
+      <div>
+            
     
-    <!--link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="vendor/bootstrap-material-design/dist/css/ripples.min.css">
-    <link rel="stylesheet" href="vendor/bootstrap-material-design/dist/css/material-wfont.min.css"-->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/ripples.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/material.min.css">
-    <!-- build:css style/app.min.css -->
-    <link rel="stylesheet" href="style/main.css">
-    <!-- endbuild -->
-    <link rel="localization" href="locales/manifest.json">
+</div>
+<ul class="tabslider">
+    <li><a href="http://www.further-logistics.com/test/NewDetail.html">hyperlink</a><span>13:47</span></li>
+    <li><a href="http://www.further-logistics.com/test/NewDetail.html">hyperlink</a><span>13:47</span></li>
+    <li><a href="http://www.further-logistics.com/test/NewDetail.html">hyperlink</a><span>13:47</span></li>
+    <li><a href="\test\news\News.html">\news\New.html</a><span>13:47</span></li>
+    <li><a href="NewDetail.html">该页面的按钮也会被突出显示，归功于 ui-btn-active 类</a><span>13:47</span></li>
+	    <li><a href="NewDetail.html">该页面的按钮也会被突出显示，归功于 ui-btn-active 类</a><span>13:47</span></li>
+    <li><a href="NewDetail.html">该页面的按钮也会被突出显</a><span>13:47</span></li>
+    <li><a href="NewDetail.html">该页面的按钮也会被突</a><span>13:47</span></li>
+    <li><a href="NewDetail.html">该页面的按钮也会被突出显示，归功于</a><span>13:47</span></li>
+    <li><a href="NewDetail.html">该页面的按钮也会被突出显示，归功于 ui-btn-active 类</a><span>13:47</span></li>
+	    <li><a href="NewDetail.html">该页面的按钮也会被突出显示，归功于 ui-btn-active 类</a><span>13:47</span></li>
+    <li><a href="NewDetail.html">该页面的按钮也会被突出显</a><span>13:47</span></li>
+    <li><a href="NewDetail.html">该页面的按钮也会被突</a><span>13:47</span></li>
+    <li><a href="NewDetail.html">该页面的按钮也会被突出显示，归功于</a><span>13:47</span></li>
+    <li><a href="NewDetail.html">该页面的按钮也会被突出显示，归功于 ui-btn-active 类</a><span>13:47</span></li>
+    </ul>
+    </div>
 
-    <!-- build:js js/app.min.js -->
-    <script defer src="vendor/l20n/l20n.min.js"></script>
-    <!-- endbuild -->
-    <!-- web component
-    <script defer src="vendor/platform/platform.js"></script>
-    <link rel="import" href="parts/app-main.html">
-    -->
-    <!-- uncomment to enable stress test
-    <script src="vendor/gremlins.js/gremlins.min.js"></script>
-    <script>
-      gremlins.createHorde().unleash();
-    </script>
-    -->
-  </head>
-  <body fullbleed unresolved class="hidden">
-    <header id="header" class="navbar navbar-fixed-top shadow-z-3">
-      <a class="navbar-brand" href="#">Webapplate</a>
-      <ul class="nav navbar-nav pull-left">
-      </ul>
-    </header>
-    <section id="content" class="well">
-      <!-- Add your site or application content here -->
-      <h3 data-l10n-id="hello"></h3>
-      <p data-l10n-id="info_static"></p>
-    </section>
+	<div class="keleyirap">
 
-    <!-- build:js js/body.min.js -->
-    <!-- Custom actions here -->
-    <!--script defer src="vendor/jquery/dist/jquery.min.js"></script>
-    <script defer src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script defer src="vendor/bootstrap-material-design/dist/js/ripples.min.js"></script>
-    <script defer src="vendor/bootstrap-material-design/dist/js/material.min.js"></script>
-    <script src="public/vendor/localforage/dist/localforage.min.js"></script-->
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/js/ripples.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/js/material.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/localforage/1.2.1/localforage.min.js"></script>
-    <script defer src="js/main.js"></script>
+<!--右下角按钮↓-->
+<div class="btn-open-close"><div class="expan3"></div></div>
+<!--右下角按钮↑-->
+<!--↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓3列菜单开始↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓-->
+<div class="btn3 clearfix">
 
-    <!-- App Install detection -->
-    <!--<script defer src="js/app_installer.js"></script>-->
-    <!-- endbuild -->
+<div class="menu">
+<div class="bt-name"><a href="http://keleyi.com">首页</a></div>
+</div><!--menu-->
 
-    <!-- Debugger - remove for production -->
-    <!--<script defer src="https://getfirebug.com/firebug-lite.js"></script>-->
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <!--<script>
-        var _gaq=[["_setAccount","UA-XXXXX-X"],["_trackPageview"]];
-        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
-        g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
-        s.parentNode.insertBefore(g,s)}(document,"script"));
-    </script>-->
-  </body>
+<div class="menu">
+<div class="bt-name">HoverTree</div>
+<div class="sanjiao"></div>
+<ul class="new-sub">
+<li><a href="http://hovertree.com/menu/jquery/">jQuery</a></li>
+<li><a href="http://hovertree.com/hvtart/bjae/e3c9b53337d68d7e.htm">猜谜语</a></li>
+<li><a href="http://hovertree.com/hvtart/bjae/5w5svpu4.htm">CSS菜单</a></li>
+<li><a href="http://hovertree.com/texiao/">特效库</a></li>
+</ul>
+</div><!--menu-->
+
+
+<div class="menu">
+<div class="bt-name">柯乐义</div>
+<div class="sanjiao"></div>
+<ul class="new-sub">
+<li><a href="http://keleyi.com/a/bjac/nmwpqgag.htm">人走路</a></li>
+<li><a href="http://keleyi.com/a/bjac/e8t7hoj4.htm">下雪</a></li>
+<li><a href="http://keleyi.com/a/bjac/xkqqoac2.htm">选美</a></li>
+<li><a href="http://keleyi.com/a/bjad/8e9jd0u5.htm">星系</a></li>
+<li><a href="http://keleyi.com/a/bjae/x9ty3te1.htm">jQuery下载</a></li>
+</ul>
+</div><!--menu-->
+
+</div><!--btn3-->
+<!--↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑3列菜单end↑↑↑↑↑↑↑↑↑↑↑↑↑↑-->
+
+
+</div><!--keleyirap-->
+<div class="btn-fullbg"></div>
+<script>
+//弹出垂直菜单
+$(".keleyirap .menu").click(function () {
+if ($(this).hasClass("cura")) {
+$(this).children(".keleyirap .new-sub").hide(); //当前菜单下的二级菜单隐藏
+$(".keleyirap .menu").removeClass("cura"); //同一级的菜单项
+} else {
+$(".keleyirap .menu").removeClass("cura"); //移除所有的样式
+$(this).addClass("cura"); //给当前菜单添加特定样式
+$(".keleyirap .menu").children(".keleyirap .new-sub").hide(); //隐藏所有的二级菜单
+$(this).children(".keleyirap .new-sub").show(); //展示当前的二级菜单
+}
+});
+//弹出垂直菜单end
+//底部右侧弹出隐藏
+var flag3 = 1;
+$(".btn-open-close,.btn-fullbg").click(function() {
+if (flag3 == 1) {
+$(".btn3,.expan3,.btn-fullbg").show();
+$(".btn-open-close").addClass('expan2');
+flag3 = 0;
+} else {
+$(".btn-fullbg,.new-sub,.btn3,.expan3").hide();
+$(".menu").removeClass('cura');
+$(".btn-open-close").removeClass('expan2');
+flag3 = 1;
+}
+})
+//底部右侧弹出隐藏end
+</script>
+
+</body>
 </html>
